# orderly-ape

./: .gitignore  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: build-and-deploy.yaml  build-and-publish.yaml  build.yaml
deploy/all-in-one/: helmfile.yaml  values.yaml
deploy/all-in-one/k8s-resource/: Chart.yaml
deploy/charts/k6-operator/: Chart.yaml  values.yaml
deploy/charts/webapp/: Chart.yaml  values.yaml
deploy/demo/: orderly-ape.yaml
grafana/: test-results.json
k6/: Dockerfile
k6-operator/: Dockerfile  PROJECT  README.md  go.mod  go.sum
k6-operator/api/v1alpha1/: groupversion_info.go  testrun_types.go  zz_generated.deepcopy.go
k6-operator/cmd/: main.go
k6-operator/hack/: boilerplate.go.txt
telegraf/: Dockerfile  README.md
webapp/: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml  requirements.dev.txt  requirements.docker.txt  requirements.txt
webapp/loadtest/: admin.py  apps.py  models.py  serializers.py  signals.py  validators.py  views.py
webapp/loadtest/migrations/: 0001_initial.py  0001_initial_squashed_0007_rename_testrun_start_test_at_testrun_completed_at_and_more.py  0002_testrun_draft_alter_testrun_dedicated_nodes_and_more.py  0003_testrunenvvar_testrunlabel.py  0004_alter_testrunenvvar_value_and_more.py  0005_testoutputconfig_testrun_test_output.py  0006_testlocation_last_ping.py  0007_rename_testrun_start_test_at_testrun_completed_at_and_more.py  0008_auto_20241202_1722.py
webapp/templates/admin/: submit_line.html
webapp/webapp/: admin.py  apps.py  settings.py  urls.py
(+57 files in other folders)
