[tool.ruff]
select = ["E", "F", "I"]
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.django-stubs]
django_settings_module = "webapp.settings"

[project]
name = "orderly-ape"
dynamic = ["version"]
dependencies = [
  'django ~= 5.1',
  'django-environ',
  'django-autocomplete-light ~= 3.11',
  'django-fsm-2 ~= 3.0',
  'djangorestframework ~= 3.15 ',
  'durationpy ~= 0.9',
  'whitenoise',
  'django-debug-toolbar',
  'sentry-sdk[django]'
]

[project.optional-dependencies]
docker = [
  'gunicorn',
  'mysqlclient',
  'gevent ~= 24.11'
]
dev = [
    "django-types",
    "djangorestframework-types",
]
